<?xml version="1.0"?>
<package>
  <name>uwsim_osgocean</name>
  <version>1.0.2</version>
  <description>The OSG Ocean library adapted to UWSim. See https://code.google.com/p/osgocean</description>

  <maintainer email="mprats@willowgarage.com">Mario Prats</maintainer>
  <license>LGPL</license>

  <run_depend>catkin</run_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>boost</build_depend>
  <run_depend>boost</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
